# simulacao_de_cache

./: CMakeLists.txt  README.md  simula_cache
csv/: impacto_associatividade.csv  impacto_politica_substituicao.csv  impacto_tamanho_bloco.csv  impacto_tamanho_cache.csv  largura_banda.csv
include/cache_memory/: CacheMemory.h  CacheMemoryConfiguration.h  cacheMemoryConfiguration.h
include/command_line/: commandLine.h
include/default_structs/: structs.h
include/interfaces/: IReplacementPolicy.h  IWritePolicy.h
include/read_file/: ReadFile.h
include/reader_arquive/: ReaderArquive.h
include/substituition_policy/: PolicyLRU.h  PolicyRandom.h
include/tools/: Tools.h  TratamentString.h
include/write_policy/: WriteBack.h  WriteThrough.h
src/: main.cpp
src/cache_memory/: CacheMemory.cpp  CacheMemoryConfiguration.cpp  cacheMemoryConfiguration.cpp
src/command_line/: commandLine.cpp
src/read_file/: ReadFile.cpp
src/reader_arquive/: ReaderArquive.cpp
src/substituition_policy/: PolicyLRU.cpp  PolicyRandom.cpp
src/tools/: Tools.cpp  TratamentString.cpp
src/write_policy/: WriteBack.cpp  WriteThrough.cpp
